--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# package-lock.json
+package-lock.json
 tests/**/coverage/
 
 # Editor directories and files
